# tutorials

./: .gitmodules
cpp/: .gitignore
cpp/.devcontainer/: Dockerfile  devcontainer.json
cpp/armadillo/: test.cpp
cpp/learncpp/: .clangd  notes.md
cpp/learncpp/HelloWorld/: compatibility.cpp  main.cpp
cpp/learncpp/chapter-0/: PrintStandard.cpp  helloworld.cpp
cpp/learncpp/chapter-1/: cin.cpp  helloworld.cpp  multiply.cpp  printNum.cpp  threenums.cpp  uninit.cpp
cpp/learncpp/chapter-2/: doprint.cpp  multiply.cpp  namespace.cpp  preprocessor.cpp  scope.cpp
cpp/learncpp/chapter-2/files/: main.cpp
cpp/learncpp/chapter-2/headers/: add.cpp  add.h  main.cpp  sub.cpp  sub.h
cpp/learncpp/chapter-2/quiz/: io.cpp  io.h  (+2 more)
cpp/random/regression/: lr.cpp
docker/getting-started/app/: Dockerfile  docker-compose.yml
fastapi/: tutorial.py
fastapi/fastapi-mongo/: pyproject.toml
fastapi/fastapi-mongo/app/server/: app.py  database.py
fastapi/fastapi-mongo/app/server/models/: student.py
fastapi/fastapi-mongo/app/server/routes/: student.py
fastapi/fastapi-mongo/static/: package-lock.json  tailwind.config.js
llm/RAG/: .envrc  1_data_ingestion.ipynb  2_retrieval.ipynb  3_vector_store.ipynb  4_response_synthesis.ipynb  5_routers.ipynb  pyproject.toml
llm/multimodal/: pyproject.toml
mojo/: HelloMojo.ipynb  hello  hello.mojo
webdev/js/express/: package-lock.json  package.json  server.js
webdev/js/modern.js/: index.html  tests.js
webdev/js/public/: index.html
webdev/js/simple/: index.html  index.js  package-lock.json  package.json  webpack.config.js
webdev/reactjs/tictactoe/: package-lock.json
webdev/vite-project/: main.js
(+3 files in other folders)
