[tool.poetry]
name = "fastapi-mongo"
version = "0.1.0"
description = ""
authors = ["Tony Okeke <tonykabilanokeke@gmail.com>"]
readme = "README.md"
packages = [{include = "fastapi_mongo"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["email"], version = "^0.100.0"}
uvicorn = "^0.23.1"
motor = "^3.2.0"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
pytest = "^7.4.0"
pytest-black = "^0.3.12"
pre-commit = "^3.3.3"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
