[tool.poetry]
name = "llama-index-rag-from-scratch"
version = "0.1.0"
description = ""
authors = ["Tony Okeke <tonykabilanokeke@gmail.com>"]
readme = "README.md"
packages = [{include = "llama_index_rag_from_scratch"}]

[tool.poetry.dependencies]
python = "^3.10"
pinecone-client = "^2.2.4"
llama-index = "^0.8.29.post1"
transformers = "^4.33.2"
llama-hub = "^0.0.30"
fitz = "^0.0.1.dev2"
pillow = "^10.0.1"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
