[tool.poetry]
name = "multimodal"
version = "0.1.0"
description = ""
authors = ["Tony Okeke <tonykabilanokeke@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^0.28.1"
torch = "^2.0.1"
datasets = "^2.14.5"
transformers = "^4.33.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
